modify commit the dir name

--- a/myapp/application.yaml
+++ b/myapp/application.yaml
@@ -9,6 +9,6 @@ spec:
     source:
         repoURL: https://github.com/AdminGuyTesting/jmx01.git
         targetRevision: HEAD
-        path: my-app
+        path: myapp
     destination:
         server: https://kubernetes.default.svc
