--- a/myapp/deployment.yaml
+++ b/myapp/deployment.yaml
@@ -13,7 +13,7 @@ spec:
                 run: jmxapp01
         spec:
             containers:
-            - name: jmxapp01-application
+            - name: jmxapp01
               image: adminguytesting/jmx01:v0.1.0
               ports:
                   - containerPort: 8080,1234
